# s-rim-kospi

./: .gitignore  README.md  ROADMAP.md  dump_project_structure.py  make_project_structure.ps1  pyproject.toml  requirements.txt  streamlit_app.py  test.py
scripts/: check_db.py  check_market_loaded.py  dart_smoke_test.py
src/app/: config.py  models.py
src/app/api/: main.py  routes.py  routes_srim.py
src/app/etl/: compute.py  load.py  run_etl.py  sources_dart.py  sources_krx.py  stage3_srim.py
src/app/utils/: json_sanitize.py
